Version 1.2.1
-------------
New Applications
- Internet : TightVNC

Bug Fixes
- SourceForge just rolled out new changes which broke all applications hosted
  with them. All impacted application scrape and download URLs updated.

Version 1.2
-----------
New Applications
- Entertainment : iTunes
- Internet : uTorrent, Google WebAccelerator, Xming
- Productivity: AbiWord, Google Desktop, Paint.NET, PDFCreator, Picasa
- Utilities : Command Prompt Here, Stickies
- Development : ActivePerl, InnoSetup, NSIS, Python, PyCurl, PyYAML, wxPython,
                XAMPP

GUI Enhancements
- Checked applications are now unchecked as they are successfully installed or
  uninstalled. If the install/uninstall fails for any reason, the application
  will remain checked.

Internal Improvements
- As recommended by R. Francis Smith, new applications can be added or existing
  applications modified by making an entry in userdb.ini. This way, changes made
  by the user are not lost through database updates.
- Added support for MSI packages.
- Added support for applications which do not disclose their versions such as
  Google WebAccelerator and Desktop.
- Category and section sorts are now done case insensitively so that iTunes and
  uTorrent can show up in the right order.
- Added DOTTOUNDERSCORE_VERSION to convert 2.72 versions to 2_72.
- Changed default install directory in config.ini to environment variable 
  %ProgramFiles% which points to the Windows "Program Files" directory.
- When run with -d, the GUI now logs debugging information to debug.log.

Bug Fixes
- If install/uninstall failed for whatever reason, AppSnap still assumed that
  everything worked fine. We now check the return codes of the installer and
  fail if non-zero.
- Reload function was not deleting all process objects which were retaining the
  configuration loaded previously.
- Uninstallation was using the latest version of an application instead of the